fixes(explore, mangapage,CalendarCard) -mangapage is more responsive and loading text color -fixed explore url handling -calendarCard fix loading text color

--- a/src/style.css
+++ b/src/style.css
@@ -253,6 +253,12 @@ body {
 }
 
 /* manga.html form style */
+@media (max-width: 768px){
+	.manga-main{
+		display: flex;
+		flex-direction:column
+	}
+}
 .manga-container {
   margin-top: 5%;
   width: 100%;
